--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,3 +15,7 @@ layout: default
 
   {% include disqus.html %}
 </article>
+
+<!-- syntax highlighting -->
+<script src="/js/vendor/highlight.pack.js"></script>
+<script>
