updated syntax highlighting

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,5 +17,4 @@ layout: default
 </article>
 
 <!-- syntax highlighting -->
-<script src="/js/vendor/highlight.pack.js"></script>
-<script>
+<script src="{{site.url}}/js/vendor/highlight.pack.js"></script>
