font update and post added
Blog Title - Deconstructing logo animation

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -17,6 +17,8 @@ $white: #fff;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
+$mont: "Montserrat", sans-serif;
+$opensans: "Open Sans", sans-serif;
 $code: Consolas, monaco, monospace;
 
 // Mobile breakpoints
