--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@
 //
 
 @import "reset";
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:400,400i');
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
 
@@ -19,7 +20,7 @@ html {
 
 body {
 	background: $white;
-  font: 18px/1.4 $helvetica;
+  font: 18px/1.4 $opensans;
   color: $darkGray;
 }
 
@@ -31,7 +32,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
+  font-family: $mont;
   color: $darkerGray;
   font-weight: bold;
 
@@ -194,7 +195,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $helveticaNeue;
+  font-family: $mont;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -213,7 +214,7 @@ img {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
+  font-family: $mont;
   font-size: 18px;
 
   @include mobile {
@@ -286,6 +287,16 @@ footer {
 .highlighter-rouge{
   font-family: $code;
   font-size: 85%;
+  color: $gray;
+  pre{
+    white-space: pre-wrap;
+  }
+  & > .highlight{
+    padding: 1.5rem;
+  }
+  &:not([class*=lang]){
+    padding: 0 2px;
+  }
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
