added script files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
           </div> -->
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/blog">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
@@ -48,7 +48,7 @@
         </footer>
       </div>
     </div>
-
+    {% include scripts.html %}
     {% include analytics.html %}
   </body>
 </html>
