--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@
 @import "reset";
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:400,400i');
 @import "variables";
+@import url("css/fa/font-awesome.scss");
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
@@ -123,12 +124,12 @@ img {
 
 // Specify the color of the selection
 ::-moz-selection {
-  color: $black;
-  background: $lightGray;
+  color: $white;
+  background: $green;
 }
 ::selection {
-  color: $black;
-  background: $lightGray;
+  color: $white;
+  background: $green;
 }
 
 // Nicolas Gallagher's micro clearfix hack
@@ -183,7 +184,7 @@ img {
   }
 
   img {
-    border-radius: 5px;
+    // border-radius: 5px;
   }
 }
 
@@ -244,6 +245,48 @@ nav {
   }
 }
 
+//
+// homepage
+//
+
+.landing-button-wrapper {
+  width: 100%;
+  padding-top: 40px;
+  ul {
+    list-style: none;
+    padding-left: 0;
+    display: flex;
+    width: 100%;
+  }
+  li {
+    flex: 1 auto;
+    text-align: center;
+  }
+  .fa {
+    font-size: 3em;
+  }
+  a {
+    color: #666;
+    transition: all 0.25s ease;
+  }
+  a:hover {
+    [class*="facebook"] {
+      color: #3b5998;
+    }
+    [class*="twitter"] {
+      color: #4099ff;
+    }
+    [class*="linkedin"] {
+      color: #0e76a8;
+    }
+    [class*="codepen"] {
+      color: #171515;
+    }
+    [class*="github"] {
+      color: #000000;
+    }
+  }
+}
 //
 // .main
 //
