homepage and footer cleanup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,10 @@ layout: base
         <p class="site-description">{{ site.description }}</p>
       </div> -->
 
-      <nav>
+      <!-- <nav>
         <a href="{{ site.baseurl }}/blog">Blog</a>
         <a href="{{ site.baseurl }}/about">About</a>
-      </nav>
+      </nav> -->
     </header>
   </div>
 </div>
