--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -1,13 +1,32 @@
-{% if site.footer-links.dribbble %}<a href="https://dribbble.com/{{ site.footer-links.dribbble }}"><i class="svg-icon dribbble"></i></a>{% endif %}
-{% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}"><i class="svg-icon email"></i></a>{% endif %}
-{% if site.footer-links.facebook %}<a href="https://www.facebook.com/{{ site.footer-links.facebook }}"><i class="svg-icon facebook"></i></a>{% endif %}
-{% if site.footer-links.flickr %}<a href="https://www.flickr.com/{{ site.footer-links.flickr }}"><i class="svg-icon flickr"></i></a>{% endif %}
-{% if site.footer-links.github %}<a href="https://github.com/{{ site.footer-links.github }}"><i class="svg-icon github"></i></a>{% endif %}
-{% if site.footer-links.instagram %}<a href="https://instagram.com/{{ site.footer-links.instagram }}"><i class="svg-icon instagram"></i></a>{% endif %}
-{% if site.footer-links.linkedin %}<a href="https://www.linkedin.com/in/{{ site.footer-links.linkedin }}"><i class="svg-icon linkedin"></i></a>{% endif %}
-{% if site.footer-links.pinterest %}<a href="https://www.pinterest.com/{{ site.footer-links.pinterest }}"><i class="svg-icon pinterest"></i></a>{% endif %}
-{% if site.footer-links.rss %}<a href="{{ site.baseurl }}/feed.xml"><i class="svg-icon rss"></i></a>{% endif %}
-{% if site.footer-links.twitter %}<a href="https://www.twitter.com/{{ site.footer-links.twitter }}"><i class="svg-icon twitter"></i></a>{% endif %}
-{% if site.footer-links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}"><i class="svg-icon stackoverflow"></i></a>{% endif %}
-{% if site.footer-links.youtube %}<a href="https://youtube.com/{{ site.footer-links.youtube }}"><i class="svg-icon youtube"></i></a>{% endif %}
-{% if site.footer-links.googleplus %}<a href="https://plus.google.com/{{ site.footer-links.googleplus }}"><i class="svg-icon googleplus"></i></a>{% endif %}
+<ul class="landing-button-wrapper">
+  <li>
+      <a href="https://www.facebook.com/quinton.jason" target="_blank">
+          <i class="fa fa-facebook"></i>
+          <span class="hide-text">Facebook</span>
+      </a>
+  </li>
+  <li>
+      <a href="https://twitter.com/quintonjasonjr"  target="_blank">
+          <i class="fa fa-twitter"></i>
+          <span class="hide-text">Twitter</span>
+      </a>
+  </li>
+  <li>
+      <a href="https://www.linkedin.com/in/quintonjason/"  target="_blank">
+          <i class="fa fa-linkedin"></i>
+          <span class="hide-text">LinkedIn</span>
+      </a>
+  </li>
+  <li>
+      <a href="https://codepen.io/quintonjason/"  target="_blank">
+          <i class="fa fa-codepen"></i>
+          <span class="hide-text">Codepen</span>
+      </a>
+  </li>
+  <li>
+      <a href="https://github.com/QuintonJason"  target="_blank">
+          <i class="fa fa-github"></i>
+          <span class="hide-text">Github</span>
+      </a>
+  </li>
+</ul>
