--- a/style.scss
+++ b/style.scss
@@ -356,6 +356,10 @@ footer {
   .read-more {
     text-transform: uppercase;
     font-size: 15px;
+    &:hover,
+    &:focus{
+      text-decoration: underline;
+    }
   }
 }
 
