--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -1,9 +1,16 @@
+
+// Syntax highlighting @import is at the bottom of this file
+
+/**************/
+/* BASE RULES */
+/**************/
+
 html {
   font-size: 100%;
 }
 
 body {
-	background: $white;
+  background: $white;
   font: 18px/1.4 $opensans;
   color: $darkGray;
 }
@@ -29,22 +36,22 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-h1 {
+h1,.h1 {
   font-size: 30px;
   a {
     color: inherit;
   }
 }
 
-h2 {
+h2,.h2 {
   font-size: 24px;
 }
 
-h3 {
+h3,.h3 {
   font-size: 20px;
 }
 
-h4 {
+h4,.h4 {
   font-size: 18px;
   color: $gray;
 }
@@ -56,8 +63,423 @@ p {
 a {
   color: $green;
   text-decoration: none;
-	cursor: pointer;
+  cursor: pointer;
   &:hover, &:active {
     color: $green;
   }
 }
+
+ul, ol {
+  margin: 15px 0;
+  padding-left: 30px;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+ol {
+  list-style-type: decimal;
+}
+
+ol ul, ul ol, ul ul, ol ol {
+  margin: 0;
+}
+
+ul ul, ol ul {
+  list-style-type: circle;
+}
+
+em, i {
+  font-style: italic;
+}
+
+strong, b {
+  font-weight: bold;
+}
+
+img {
+  max-width: 100%;
+}
+
+// Fixes images in popup boxes from Google Translate
+.gmnoprint img {
+  max-width: none;
+}
+
+.date {
+  font-style: italic;
+  color: $gray;
+}
+
+// Specify the color of the selection
+::-moz-selection {
+  color: $white;
+  background: $green;
+}
+::selection {
+  color: $white;
+  background: $green;
+}
+
+// Nicolas Gallagher's micro clearfix hack
+// http://nicolasgallagher.com/micro-clearfix-hack/
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+/*********************/
+/* LAYOUT / SECTIONS */
+/*********************/
+#qj-logo{
+  &:hover,
+  &:focus{
+    cursor: pointer;
+  }
+}
+#logo-pic{
+  opacity: 0;
+  visibility: hidden;
+}
+
+.wrapper-masthead {
+  margin-bottom: 50px;
+}
+
+.masthead {
+  padding: 20px 0;
+  border-bottom: 1px solid $lightGray;
+
+  @include mobile {
+    text-align: center;
+  }
+}
+
+.site-avatar {
+  float: left;
+  width: 70px;
+  height: 70px;
+  margin-right: 15px;
+
+  @include mobile {
+    float: none;
+    display: block;
+    margin: 0 auto;
+  }
+
+  img {
+    // border-radius: 5px;
+  }
+}
+
+.site-info {
+  float: left;
+
+  @include mobile {
+    float: none;
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+.site-name {
+  margin: 0;
+  color: $darkGray;
+  cursor: pointer;
+  font-family: $mont;
+  font-weight: 300;
+  font-size: 28px;
+  letter-spacing: 1px;
+}
+
+.site-description {
+  margin: -5px 0 0 0;
+  color: $gray;
+  font-size: 16px;
+
+  @include mobile {
+    margin: 3px 0;
+  }
+}
+
+nav {
+  float: right;
+  margin-top: 23px; // @TODO: Vertically middle align
+  font-family: $mont;
+  font-size: 18px;
+
+  @include mobile {
+    float: none;
+    margin-top: 9px;
+    display: block;
+    font-size: 16px;
+  }
+
+  a {
+    margin-left: 20px;
+    color: $darkGray;
+    text-align: right;
+    font-weight: 300;
+    letter-spacing: 1px;
+
+    @include mobile {
+      margin: 0 10px;
+      color: $green;
+    }
+  }
+}
+
+//
+// header and logo
+//
+#qj-logo{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  &:hover,
+  &:focus{
+    cursor: pointer;
+  }
+}
+#logo-pic{
+  opacity: 0;
+  visibility: hidden;
+}
+
+//
+// homepage
+//
+
+footer {
+  width: 100%;
+  padding-top: 40px;
+  ul {
+    list-style: none;
+    padding-left: 0;
+    display: flex;
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+  }
+  li {
+    flex: 1 auto;
+    text-align: center;
+  }
+  .fa {
+    font-size: 1.5em;
+  }
+  a {
+    color: #666;
+    transition: all 0.25s ease;
+  }
+  a:hover {
+    [class*="facebook"] {
+      color: #3b5998;
+    }
+    [class*="twitter"] {
+      color: #4099ff;
+    }
+    [class*="linkedin"] {
+      color: #0e76a8;
+    }
+    [class*="codepen"] {
+      color: #171515;
+    }
+    [class*="github"] {
+      color: #000000;
+    }
+  }
+}
+.landing-wrapper {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  resize: both;
+  overflow: auto;
+}
+.svg-wrapper {
+  position: relative;
+  width: 50%;
+  height: 0;
+  padding-top: 34%;
+  margin: 0 auto;
+}
+//
+// .main
+//
+
+.posts > .post {
+  padding-bottom: 2em;
+  border-bottom: 1px solid $lightGray;
+}
+
+.posts > .post:last-child {
+  padding-bottom: 1em;
+  border-bottom: none;
+}
+
+.post {
+  blockquote {
+    margin: 1.8em .8em;
+    border-left: 2px solid $gray;
+    padding: 0.1em 1em;
+    color: $gray;
+    font-size: 22px;
+    font-style: italic;
+  }
+
+  .comments {
+    margin-top: 10px;
+  }
+
+  .read-more {
+    text-transform: uppercase;
+    font-size: 15px;
+    &:hover,
+    &:focus{
+      text-decoration: underline;
+    }
+  }
+}
+
+.wrapper-footer {
+  margin-top: 50px;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  background-color: $lightGray;
+}
+
+//
+// footer
+//
+
+footer {
+  padding: 20px 0;
+  text-align: center;
+}
+
+.social-icons{
+  list-style: none;
+  margin: 0px;
+  padding-left: 0;
+  li{
+    display: inline-block;
+    padding: 3px 5px 0px;
+    &:last-child{
+      padding-right: 0;
+    }
+  }
+}
+[class^="icon-"], [class*=" icon-"] {
+  display: inline-block;
+  /*color: #d3d3d3;
+  fill: currentColor;*/
+  fill: $gray;
+  -webkit-transition: background-color .3s linear, fill .3s ;
+  transition: background-color .3s linear, fill .3s;
+  border-radius: 5px;
+  padding: 0.3em;
+}
+.icon-facebook {
+  width: 32px;
+  height: 32px;
+  &:hover,
+  &:focus{
+    fill: white;
+    background-color: #3b5998;  
+  }
+}
+.icon-twitter {
+  width: 32px;
+  height: 32px;
+  &:hover,
+  &:focus{
+    fill: white;
+    background-color: #4099FF;  
+  }
+}
+.icon-feed2 {
+  width: 32px;
+  height: 32px;
+  &:hover,
+  &:focus{
+    fill: white;
+    background-color: #FF6600;  
+  }
+}
+.icon-dribbble {
+  width: 32px;
+  height: 32px;
+  &:hover,
+  &:focus{
+    fill: white;
+    background-color: #C73B6F;  
+  }
+}
+.icon-github2 {
+  width: 32px;
+  height: 32px;
+  &:hover,
+  &:focus{
+    fill: white;
+    background-color: #171515;  
+  }
+}
+.icon-linkedin {
+  width: 32px;
+  height: 32px;
+  &:hover,
+  &:focus{
+    fill: white;
+    background-color: #0e76a8;  
+  }
+}
+.icon-pinterest {
+  width: 32px;
+  height: 32px;
+  &:hover,
+  &:focus{
+    fill: white;
+    background-color: #c92228;  
+  }
+}
+.icon-codepen-logo {
+  width: 32px;
+  height: 32px;
+  &:hover,
+  &:focus{
+    fill: white;
+    background-color: #000;  
+  }
+}
+
+.highlighter-rouge{
+  font-family: $code;
+  font-size: 85%;
+  color: $gray;
+  pre{
+    white-space: pre-wrap;
+  }
+  & > .highlight{
+    padding: 1.5rem;
+  }
+  &:not([class*=lang]){
+    padding: 0 2px;
+  }
+}
+
+// Settled on moving the import of syntax highlighting to the bottom of the CSS
+// ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
+// @import "highlights";
+// @import "svg-icons";
