--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -13,6 +13,13 @@ $gray: #666;
 $lightGray: #eee;
 $white: #fff;
 
+// Icon Colors
+$facebookColor :#3b5998;
+$twitterColor :#4099ff;
+$linkedinColor :#0e76a8;
+$codepenColor :#171515;
+$githubColor :#000000;
+
 // Font stacks
 $mont: "Montserrat", sans-serif;
 $opensans: "Open Sans", sans-serif;
