--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -126,8 +126,8 @@ textarea {
   color: $gray;
   display: block;
   width: 100%;
-  font-size: 1em;
-  padding: 1em;
+  font-size: 0.8em;
+  padding: 0.5rem 0.75rem;
   margin-bottom: 1.3em;
   border-radius: 3px;
   border: 1px solid $gray;
