updated contact page

--- a/src/css/helpers.scss
+++ b/src/css/helpers.scss
@@ -30,6 +30,9 @@
     color: $white;
   }
 }
+.btn__submit {
+  margin-top: 1em;
+}
 
 /* https://github.com/IanLunn/Hover/blob/master/css/hover.css - Underline From Center */
 .hvr-underline-from-center {
